--- a/src/Cms/CoreBundle/Resources/views/Template/menu.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Template/menu.html.twig
@@ -62,4 +62,6 @@
     <input type="hidden" id="code-save-path" value="{{ path('cms_core.template_save') }}"/>
     <input type="hidden" id="site-id" value="{{ site.id }}"/>
     <input type="hidden" id="template-id" value="{{ template.id }}"/>
+    <input type="hidden" id="input-template-name" value="{{ template.name }}"/>
+    <input type="hidden" id="input-template-state" value="active"/>
 {% endblock %}
