--- a/src/Cms/CoreBundle/Resources/views/Theme/wizard.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Theme/wizard.html.twig
@@ -1,9 +1,9 @@
-{% extends '::base.html.twig' %}
+{% extends 'CmsCoreBundle:App:components.html.twig' %}
 
 {% block stylesheets %}
     {{ parent() }}
     {% stylesheets
-        '@CmsCoreBundle/Resources/public/css/theme/wizard.css'
+        '@CmsCoreBundle/Resources/public/css/wizard.css'
         filter='cssrewrite, ?yui_css' %}
         <link rel="stylesheet" href="{{ asset_url }}"/>
     {% endstylesheets %}
@@ -11,7 +11,10 @@
 
 {% block javascripts %}
     {{ parent() }}
+    <script src="/dependencies/ace-builds-master/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
     {% javascripts
+        '@CmsCoreBundle/Resources/public/js/template/aceEditor.js'
+        '@CmsCoreBundle/Resources/public/js/template/includes.js'
         '@CmsCoreBundle/Resources/public/js/theme/wizard.js'
         filter='?yui_js' %}
         <script type="text/javascript" src="{{ asset_url }}"></script>
@@ -23,17 +26,20 @@
 {% endblock %}
 
 {% block body %}
+    {% block templateModal %}
+        {{ parent() }}
+    {% endblock %}
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="span3">
                 <div class="row-fluid">
                     <nav class="span12 todo">
-                        <div class="theme-name-container clearfix">
-                            <h4 class="theme-name pull-left">{{ theme.name|default('New Theme') }}</h4>
-                            <span class="pull-right"><i class="theme-name-icon icon-eye-open icon-large"></i></span>
+                        <div class="wizard-nav-name-container clearfix">
+                            <h4 class="theme-name pull-left">{{ theme.name|default() }}</h4>
+                            <span class="pull-right"><i class="wizard-nav-name-icon icon-eye-open icon-large"></i></span>
                         </div>
                         <ul>
-                            <li>
+                            <li class="todo-active" id="todo-basic-info">
                                 <div class="todo-icon"><i class="icon-info-sign"></i></div>
                                 <div class="todo-content">
                                     <h4 class="todo-name">
@@ -42,7 +48,7 @@
                                     <span>Name, Author, Url, Images</span>
                                 </div>
                             </li>
-                            <li class="todo-done">
+                            <li id="todo-components">
                                 <div class="todo-icon"><i class="icon-puzzle-piece"></i></div>
                                 <div class="todo-content">
                                     <h4 class="todo-name">
@@ -51,7 +57,7 @@
                                     Create Twig Blocks
                                 </div>
                             </li>
-                            <li>
+                            <li id="todo-layouts">
                                 <div class="todo-icon"><i class="icon-list-alt"></i></div>
                                 <div class="todo-content">
                                     <h4 class="todo-name">
@@ -60,7 +66,7 @@
                                     <span>Design the Templates</span>
                                 </div>
                             </li>
-                            <li>
+                            <li id="todo-complete">
                                 <div class="todo-icon"><i class="icon-trophy"></i></div>
                                 <div class="todo-content">
                                     <h4 class="todo-name">
@@ -72,20 +78,30 @@
                         </ul>
                     </nav>
                 </div>
+                <div class="row-fluid hide" id="template-includes-container">
+                    <div class="span12">
+                        {% block templateIncludes %}
+                            {{ parent() }}
+                        {% endblock %}
+                    </div>
+                </div>
             </div>
             <section class="span9">
                 <div id="wizard-content">
                     <div class="row-fluid wizard-header">
                         <div class="span12 clearfix">
                             <div class="progress pull-left span6">
-                                <div class="bar span6" style="width: 45%;"></div>
+                                <div class="bar span6"></div>
+                            </div>
+                            <div class="span2 progress-label" id="primary-progress-label">
+                                <span class="percent-complete">45%</span> Complete
                             </div>
                             <a href="#" class="close">&times;</a>
                         </div>
                     </div>
                     <div class="row-fluid">
                         <div class="wizard-body span12">
-                            <div class="flat-form-container theme-basic">
+                            <div class="wizard-body-item theme-basic flat-form-container hide">
                                 <form id="theme-basic-form" class="wizard-form">
                                     <label for="input-theme-name">Theme Name:*</label>
                                     <input type="text" class="span12" id="input-theme-name" value="{{ theme.name|default() }}" placeholder="Type name of theme"/>
@@ -99,12 +115,21 @@
                                     <input type="text" class="span12" id="input-theme-image" value="{{ theme.image|default() }}" placeholder="Add the URL to a screenshot image"/>
                                 </form>
                             </div>
+                            <div class="wizard-body-item theme-components">
+                                <div id="error-container"></div>
+                                <form id="save-template-form" action="{{ path('cms_core.template_save') }}" method="POST">
+                                    <div id='input-code-content'>Add your twig blocks and HTML code here</div>
+                                    <div class="row-fluid">
+                                        <button class="btn btn-info span2 pull-right" style="position: relative; left: 4px;">Save</button>
+                                    </div>
+                                </form>
+                            </div>
                         </div>
                     </div>
                     <div class="row-fluid">
                         <div class="wizard-footer">
-                            <button class="btn btn-primary wizard-previous pull-left" id="author-form-submit" disabled="true">Previous</button>
-                            <button class="btn btn-primary wizard-next pull-right">Save and Proceed</button>
+                            <button class="btn btn-primary wizard-save wizard-previous pull-left" id="author-form-submit" data-current="theme-basic" disabled="true">Previous</button>
+                            <button class="btn btn-primary wizard-save wizard-next pull-right" data-current='theme-basic'>Save and Proceed</button>
                         </div>
                     </div>
                 </div>
@@ -113,4 +138,10 @@
     </div>
     <input type="hidden" id="theme" value="{{ theme | serialize('json') }}"/>
     <input type="hidden" id="input-theme-name" class="theme-name" value="{{ theme.name|default() }}"/>
+    {#template vars#}
+    <input type="hidden" id="template-id" value=""/>
+    <input type="hidden" id="input-template-name" value=""/>
+    <input type="hidden" id="input-template-type" value="templateTheme"/>
+    <input type="hidden" id="input-template-state" value="draft"/>
+    <input type="hidden" id="code-save-path" value="{{ path('cms_core.template_save') }}"/>
 {% endblock %}
