--- a/src/Cms/CoreBundle/Resources/public/css/wizard.css
+++ b/src/Cms/CoreBundle/Resources/public/css/wizard.css
@@ -9,6 +9,10 @@
     color: #34495e;
     padding: 19px 25px 20px;
 }
+.wizard-nav-name-container i {
+    position: relative;
+    top: 5px;
+}
 .wizard-nav-name-container h4 {
     font-size: 19px;
     font-weight: bold;
@@ -46,7 +50,7 @@ h4 {
 .flat-form-container label {
     font-size: 16px;
 }
-.flat-form-container input {
+.flat-form-container input, .flat-form-container textarea {
     border: none;
     background-color: #2F4256;
     color: white;
@@ -57,6 +61,9 @@ h4 {
     padding-left: 0px;
     position: relative;
     left: -6px;
+}
+.flat-form-container textarea {
+    padding: 8px 6px;
 }
 .wizard-footer {
     padding-top: 25px;
