--- a/src/Cms/CoreBundle/Resources/views/ThemeOrg/edit.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/ThemeOrg/edit.html.twig
@@ -5,40 +5,74 @@
 {% endblock %}
 
 {% block body %}
-    <div class="row-fluid">
-        <div class="span12">
-            {% if themeOrg is defined %}
-                <h1>Edit {{ themeOrg.namespace|title }}</h1>
-            {% else %}
-                <h1>New Theme Org Profile</h1>
-            {% endif %}
+    <div class="container">
+        <div class="row">
+            <div class="span12">
+                {% if themeOrg is defined %}
+                    <h1>Edit {{ themeOrg.namespace|title }}</h1>
+                {% else %}
+                    <h1>New Theme Org Profile</h1>
+                {% endif %}
+            </div>
         </div>
-    </div>
-    {% block notices %}
-        {{ parent() }}
-    {% endblock %}
-    <div class="row-fluid">
-        <div class="span10">
-            <form action="{{ path('cms_core.themeOrg_save') }}" method="POST">
-                <input type="hidden" name="id" id="input-id" value="{{ themeOrg.id|default() }}" />
-                <input type="hidden" name="token" id="input-token" value="{{ token }}"/>
-                <label for="input-organization">Organization/Author Name:</label>
-                <input type="text" name="organization" id="input-organization" value="{{ themeOrg.organization|default() }}" placeholder="organization" class="span12"/>
-                <label for="input-name">Name:</label>
-                <input type="text" name="namespace" id="input-name" value="{{ themeOrg.namespace|default() }}" placeholder="Namespace name" class="span12"/>
-                <label for="input-website">Website URL:</label>
-                <input type="text" name="website" id="input-website" value="{{ themeOrg.website|default() }}" placeholder="Website URL" class="span12"/>
-                <label for="input-image">Logo</label>
-                <input type="text" name="image" id="input-image" value="{{ themeOrg.image|default() }}" placeholder="URL to image" class="span12"/>
-                <input type="submit" value="Save" class="btn btn-info pull-right"/>
-            </form>
+        {% block notices %}
+            {{ parent() }}
+        {% endblock %}
+        <div class="row">
+            <div class="span12">
+                <form action="{{ path('cms_core.themeOrg_save') }}" method="POST">
+                    <input type="hidden" name="id" id="input-id" value="{{ themeOrg.id|default() }}" />
+                    <input type="hidden" name="token" id="input-token" value="{{ token }}"/>
+                    <label for="input-organization">Organization/Author Name:</label>
+                    <input type="text" name="organization" id="input-organization" value="{{ themeOrg.organization|default() }}" placeholder="organization" class="span12"/>
+                    <label for="input-name">Name:</label>
+                    <input type="text" name="namespace" id="input-name" value="{{ themeOrg.namespace|default() }}" placeholder="Namespace name" class="span12"/>
+                    <label for="input-website">Website URL:</label>
+                    <input type="text" name="website" id="input-website" value="{{ themeOrg.website|default() }}" placeholder="Website URL" class="span12"/>
+                    <label for="input-image">Logo</label>
+                    <input type="text" name="image" id="input-image" value="{{ themeOrg.image|default() }}" placeholder="URL to image" class="span12"/>
+                    <input type="submit" value="Save" class="btn btn-info pull-right"/>
+                </form>
+            </div>
         </div>
-    </div>
-    <div class="row-fluid">
-        <ul class="span10">
-            {% for theme in themeOrg.themes  %}
-                {{ theme }}
-            {% endfor %}
-        </ul>
+        <br>
+        <section class="row">
+            <div class="span12">
+                <table class="table table-hover">
+                    <tr>
+                        <th>Theme Name</th>
+                        <th>Trash</th>
+                    </tr>
+                    <tr>
+                        {% for theme in themeOrg.themes  %}
+                            <td>{{ theme.name }}</td>
+                            <td>
+                                <form action="{{ path('cms_core.theme_delete') }}" method="POST">
+                                    <input type="hidden" name="token" value="{{ token }}"/>
+                                    <input type="hidden" name="id" value="{{ theme.id }}"/>
+                                    <button class="btn btn-danger"><i class="icon-trash"></i> trash</button>
+                                </form>
+                            </td>
+                        {% endfor %}
+                    </tr>
+                </table>
+            </div>
+        </section>
+        <div class="row">
+            <div class="span12">
+                <a href="{{ path('cms_core.theme_wizard', {'orgId':themeOrg.id}) }}" class="btn btn-info pull-right">Create a New Template</a>
+            </div>
+        </div>
+        <hr>
+        <nav class="row">
+            <div class="span12">
+                <a href="{{ path('cms_core.themeOrg_readAll') }}"><i class="icon-chevron-sign-left"></i> Read All</a>
+            </div>
+        </nav>
+        <footer>
+            {% block footer %}
+                {{ parent() }}
+            {% endblock %}
+        </footer>
     </div>
 {% endblock %}
