laid out the ground work for using themeWizard with less JS dependence

--- a/src/Cms/CoreBundle/Resources/public/css/wizard.css
+++ b/src/Cms/CoreBundle/Resources/public/css/wizard.css
@@ -99,8 +99,8 @@ h4 {
     color: #1ABC9C;
 }
 .todo-active {
-    color: #1ABC9C;
+    color: #2ECC71;
 }
 .todo-active .todo-name {
-    color: #1ABC9C;
+    color: #2ECC71;
 }
