--- a/src/Cms/CoreBundle/Resources/views/Theme/wizardTemplate.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Theme/wizardTemplate.html.twig
@@ -11,25 +11,34 @@
 {% block javascripts %}
     {{ parent() }}
     {% javascripts
-        '@CmsCoreBundle/Resources/public/js/theme/wizardBasic.js'
+        '@CmsCoreBundle/Resources/public/js/template/aceEditor.js'
+        '@CmsCoreBundle/Resources/public/js/template/includes.js'
+        '@CmsCoreBundle/Resources/public/js/theme/wizardTemplate.js'
         filter='?yui_js' %}
         <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
 {% endblock %}
 
 {% block body %}
-    {% block templateModal %}
-        {{ parent() }}
-    {% endblock %}
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="span3">
-                {% block todo %}
-                    {{ parent() }}
-                {% endblock %}
+                <div class="row-fluid">
+                    <div class="span12">
+                        {% block todo %}
+                            {{ parent() }}
+                        {% endblock %}
+                    </div>
+                </div>
+                <div class="row-fluid" id="template-includes-container">
+                    <div class="span12">
+                        {% block templateIncludes %}
+                            {{ parent() }}
+                        {% endblock %}
+                    </div>
+                </div>
             </div>
             <section class="span9">
-                <div id="#error-container"></div>
                 <div id="wizard-content">
                     <div class="row-fluid wizard-header">
                         <div class="span12 clearfix">
@@ -44,16 +53,13 @@
                     </div>
                     <div class="row-fluid">
                         <div class="wizard-body span12">
-                            <div class="wizard-body-item theme-basic flat-form-container">
-                                <form id="theme-basic-form" class="wizard-form">
-                                    <input type="hidden" name="themeOrgId" id="input-theme-org-id" value="{{ themeOrg.id }}"/>
-                                    <input type="hidden" name="themeId" id="input-theme-id" value="{{ theme.id|default() }}"/>
-                                    <label for="input-theme-name">Theme Name:*</label>
-                                    <input type="text" class="span12" id="input-theme-name" value="{{ theme.name|default() }}" placeholder="Type the name of your new theme"/>
-                                    <label for="input-theme-image">Screenshot URL:</label>
-                                    <input type="text" class="span12" id="input-theme-image" value="{{ theme.image|default() }}" placeholder="Add the URL to a screenshot image (can skip for now)"/>
-                                    <label for="input-theme-description">Description:</label>
-                                    <textarea id="input-theme-description" class="span12" placeholder="Write a brief description of this theme" rows="8">{{ theme.description|default() }}</textarea>
+                            <div class="wizard-body-item theme-components">
+                                <div id="error-container"></div>
+                                <form id="save-template-form" action="{{ path('cms_core.template_save') }}" method="POST">
+                                    <div id='input-code-content'>{{ rawCode|default('Add your twig blocks and HTML code here') }}</div>
+                                    <div class="row-fluid">
+                                        <button class="btn btn-info span2 pull-right" style="position: relative; left: 4px;">Save</button>
+                                    </div>
                                 </form>
                             </div>
                         </div>
@@ -68,6 +74,9 @@
             </section>
         </div>
     </div>
-    <input type="hidden" id="save-theme-path" value="{{ path('cms_core.theme_wizard_save') }}"/>
+    <input type="hidden" id="input-template-id" value="{{ template.id|default() }}"/>
+    <input type="hidden" id="input-theme-org-id" value="{{ themeOrg.id }}"/>
+    <input type="hidden" id="input-theme-id" value="{{ theme.id }}"/>
+    <input type="hidden" id="code-save-path" value="{{ path('cms_core.theme_wizard_save_components') }}"/>
     <input type="hidden" id="base-url" value="{{ app.request.baseUrl }}"/>
 {% endblock %}
