dumped new assetic assets. Change default wizard color scheme

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,7 +14,7 @@
             {% stylesheets
                 'flat-ui/css/flat-ui-local.css'
                 'flat-ui/custom/css/custom.css'
-                filter='cssrewrite, ?yui_css' %}
+                filter='cssrewrite' %}
                 <link rel="stylesheet" href="{{ asset_url }}"/>
             {% endstylesheets %}
         {% endblock %}
