--- a/src/Cms/CoreBundle/Resources/views/Media/new.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Media/new.html.twig
@@ -4,7 +4,7 @@
     {{ parent() }}
     {% stylesheets
     '@CmsCoreBundle/Resources/public/css/media/new.css'
-    filter='cssrewrite, ?yui_css' %}
+    filter='cssrewrite' %}
     <link rel="stylesheet" href="{{ asset_url }}"/>
     {% endstylesheets %}
 {% endblock %}
@@ -17,7 +17,7 @@
     {% javascripts
         '@CmsCoreBundle/Resources/public/js/filepicker.js'
         '@CmsCoreBundle/Resources/public/js/media/new.js'
-    filter='?yui_js' %}
+    %}
     <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
 {% endblock %}
