--- a/src/Cms/CoreBundle/Resources/views/Media/read.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Media/read.html.twig
@@ -6,7 +6,7 @@
     'flat-ui/calendar/jquery-ui-1.10.3.custom.min.css'
     '@CmsCoreBundle/Resources/public/css/admin/loop.css'
     '@CmsCoreBundle/Resources/public/css/media/read.css'
-    filter='cssrewrite, ?yui_css' %}
+    filter='cssrewrite' %}
     <link rel="stylesheet" href="{{ asset_url }}"/>
     {% endstylesheets %}
 {% endblock %}
@@ -19,7 +19,7 @@
     'flat-ui/js/flatui-calendar.js'
     '@CmsCoreBundle/Resources/public/js/checkboxList.js'
     '@CmsCoreBundle/Resources/public/js/media/read.js'
-    filter='?yui_js' %}
+    %}
     <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
 {% endblock %}
