--- a/src/Cms/CoreBundle/Resources/views/Welcome/signup.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/signup.html.twig
@@ -5,7 +5,7 @@
     {% stylesheets
         '@CmsUserBundle/Resources/public/css/login.css'
         '@CmsCoreBundle/Resources/public/css/welcome/signup.css'
-        filter='cssrewrite,?yui_css' %}
+        filter='cssrewrite' %}
         <link rel="stylesheet" href="{{ asset_url }}"/>
     {% endstylesheets %}
 {% endblock %}
