--- a/src/Cms/CoreBundle/Resources/views/Settings/themeDepot.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Settings/themeDepot.html.twig
@@ -17,30 +17,35 @@
     {% block themeHeader %}
         {{ parent() }}
     {% endblock %}
+    <div id="error-container"></div>
     <div class="row-fluid">
         {% for themeOrg in themeOrgs  %}
             {% for theme in themeOrg.themes  %}
-                <div>
-                    <div class="span3 theme-holder">
-                        <img src="{{ theme.image('featured')|default('') }}" class="theme-image"/>
-                        <h4>{{ theme.name }}</h4>
-                        <p>by: {{ themeOrg.organization }}</p>
-                        <div class="row-fluid">
-                            <button class="btn span6">details</button>
-                            <button class="btn btn-info span6">
+                {# once theme approval process is complete, add theme state #}
+                {% if theme.id %}
+                    <div>
+                        <div class="span3 theme-holder">
+                            <img src="{{ theme.image('featured')|default('') }}" class="theme-image span12"/>
+                            <h4>{{ theme.name }}</h4>
+                            <p>by: {{ themeOrg.organization }}</p>
+                            <div class="row-fluid">
+                                <button class="btn span6" data-theme-id="{{ theme.id }}" data-theme-org-id="{{ themeOrg.id }}">details</button>
                                 {% if theme.name in site.templateNames %}
-                                    select
+                                    <button class="btn btn-info span6 select-theme" data-theme-id="{{ theme.id }}" data-theme-org-id="{{ themeOrg.id }}">select</button>
                                 {% else %}
-                                    add
+                                    <button class="btn btn-info span6 add-theme" data-theme-id="{{ theme.id }}" data-theme-org-id="{{ themeOrg.id }}">add</button>
                                 {% endif %}
-                            </button>
+                            </div>
                         </div>
                     </div>
-                </div>
+                {% endif %}
             {% endfor %}
         {% endfor %}
     </div>
     {% block footer %}
         {{ parent() }}
     {% endblock %}
+    <input type="hidden" id="add-theme-path" value="{{ path('cms_core.site_add_theme') }}"/>
+    <input type="hidden" id="input-site-id" value="{{ site.id }}"/>
+    <input type="hidden" id="base-url" value="{{ app.request.baseUrl }}"/>
 {% endblock %}
