--- a/src/Cms/CoreBundle/Resources/views/Settings/themeRepo.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Settings/themeRepo.html.twig
@@ -21,7 +21,7 @@
         {% for theme in site.themes  %}
             <div>
                 <div class="span3 theme-holder">
-                    <img src="{{ theme.image|default('logo.png') }}" class="theme-image"/>
+                    <img src="{{ theme.image|default('logo.png') }}" class="theme-image span12"/>
                     <h4>{{ theme.name }}</h4>
                     <div class="row-fluid">
                         <button class="btn span6">details</button>
